<resources>
    <string name="BACKUP_GET_URL" translatable="false">http://193.122.108.23:7070/</string>
    <string name="GET_URL" translatable="false">http://quizzical.canadacentral.cloudapp.azure.com/</string>
    <string name="PROFILE_IMAGE_ENDPOINT" translatable="false">/profileImg</string>
    <string name="USER_ENDPOINT" translatable="false">/user</string>
    <string name="NOTIFICATION_ENDPOINT" translatable="false">/notifications</string>
    <string name="CLASS_ENDPOINT" translatable="false">/class</string>
    <string name="INSTRUCTOR_STATS_ENDPOINT" translatable="false">/instructorStats</string>
    <string name="STUDENT_STATS_ENDPOINT" translatable="false">/studentStats</string>
    <string name="QUIZ_ENDPOINT" translatable="false">/quiz</string>
    <string name="CONTACT_ENDPOINT" translatable="false">/contact</string>
    <string name="CLASS_DETAIL_ENDPOINT" translatable="false">/classDetails</string>
    <string name="CLASS_STATS_ENDPOINT" translatable="false">/classStats</string>
    <string name="PROFILE_ENDPOINT" translatable="false">users/profile</string>
    <string name="DELETE_CLASS" translatable="false">deleteClass</string>
    <string name="DELETE_QUIZ" translatable="false">deleteQuiz</string>
    <string name="LIKE_ENDPOINT" translatable="false">/like</string>
    <string name="INSTRUCTOR_LEADERBOARD_ENDPOINT" translatable="false">instructorLeaderboard</string>
    <string name="STUDENT_LEADERBOARD_ENDPOINT" translatable="false">studentLeaderboard</string>
    <string name="NO_VALUE_JSON" translatable="false">[]</string>
    <string name="QUIZ_URL" translatable="false"><![CDATA[http://quizzical.canadacentral.cloudapp.azure.com/quiz?classCode=%d&quizCode=%d]]></string>
    <string name="QUIZ_NUM_SCORE" translatable="false">quiz%sscore</string>
    <string name="TYPE" translatable="false">type=</string>
    <string name="app_name" translatable="false">quizzical</string>
    <string name="YES">yes</string>
    <string name="NO">no</string>
    <string name="curr_login_user" translatable="false">currLoginUser</string>
    <string name="LOGGED" translatable="false">logged</string>
    <string name="Continue_text">Continue</string>
    <string name="USER_INFO" translatable="false">userInfo</string>
    <string name="UID" translatable="false">userId</string>
    <string name="USERNAME" translatable="false">username</string>
    <string name="EMAIL" translatable="false">Email</string>
    <string name="PROFILE_IMG" translatable="false">profileImage</string>
    <string name="EXP" translatable="false">EXP</string>
    <string name="USER_QUIZ_COUNT" translatable="false">userQuizCount</string>
    <string name="FIREBASE_TOKEN" translatable="false">firebaseToken</string>
    <string name="NOTIFICATION_FREQ" translatable="false">notificationFrequency</string>
    <string name="TRUE" translatable="false">True</string>
    <string name="FALSE" translatable="false">False</string>
    <string name="OK" translatable="false">OK</string>
    <string name="IS_INSTRUCTOR" translatable="false">isInstructor</string>
    <string name="INSTRUCTOR_UID" translatable="false">instructorUID</string>
    <string name="CREATE_CLASS" translatable="false">createClass</string>
    <string name="JOIN_CLASS" translatable="false">joinClass</string>
    <string name="CLASS_CODE" translatable="false">classCode</string>
    <string name="CLASS_NAME" translatable="false">className</string>
    <string name="CLASS_LIST" translatable="false">classList</string>
    <string name="CLASS_INFO" translatable="false">classInfo</string>
    <string name="CURR_CLASS_CODE" translatable="false">currClassCode</string>
    <string name="CURR_CLASS" translatable="false">currClass</string>
    <string name="QUIZ" translatable="false">quiz</string>
    <string name="QUIZ_CODE" translatable="false">quizCode</string>
    <string name="QUIZ_MODULES" translatable="false">quizModules</string>
    <string name="QUESTION_NUM" translatable="false">questionNum</string>
    <string name="CHOICE_NUM" translatable="false">choiceNum</string>
    <string name="REQUEST_CODE" translatable="false">requestCode</string>
    <string name="QUIZ_CONTENT" translatable="false">quizContent</string>
    <string name="CREATE_QUIZ" translatable="false">createQuiz</string>
    <string name="LOCAL_CACHE" translatable="false">localCache</string>
    <string name="PROFILE_IMG_UP_TO_DATE" translatable="false">profileImgUpToDate</string>
    <string name="NOTIFICATION_FREQ_UP_TO_DATE" translatable="false">notificationFreqUpToDate</string>
    <string name="COURSE_CATEGORY" translatable="false">courseCategory</string>
    <string name="MATH">Math</string>
    <string name="ENGLISH">English</string>
    <string name="QUANTUM_PHYSICS">QuantumPhysic</string>
    <string-array name="course_category_array">
        <item>Math</item>
        <item>English</item>
        <item>QuantumPhysic</item>
    </string-array>
    <string name="GRADE_LEVEL" translatable="false">gradeLevel</string>
    <string-array name="grades_array">
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
        <item>University</item>
    </string-array>
    <string name="QUESTION" translatable="false">question</string>
    <string name="UI_server_failure_msg">Failed to connect to the server</string>
    <string name="client_id" translatable="false">614503168151-hvg3r35tmfsqldrd32h25a9kb9inmvdv.apps.googleusercontent.com</string>
    <string name="UI_welcome_str">Welcome to Quizzical</string>
    <string name="UI_username">Username</string>
    <string name="UI_username_msg">Please enter a user name</string>
    <string name="UI_example_username" translatable="false">E.g. Valhalla</string>
    <string name="UI_username_invalid_msg">Username invalid: 3-15 characters with a-z,A-Z,0-9 and _ allowed.</string>
    <string name="UI_email_msg">Please enter your email address</string>
    <string name="UI_example_email" translatable="false">E.g. abc@example.com</string>
    <string name="UI_prompt_for_valid_email">Please enter a valid email</string>
    <string name="UI_email_invalid_msg">email invalid</string>
    <string name="UI_is_instructor_msg">Are you an instructor?</string>
    <string name="UI_require_valid_username_email_msg">Please enter valid username and email</string>
    <string name="UI_quizzes">Quizzes</string>
    <string name="UI_class_statistics">Class Statistics</string>
    <string name="UI_leader_board">LeaderBoard</string>
    <string name="UI_profile">Profile</string>
    <string name="UI_example_course_code" translatable="false">E.g. 123456</string>
    <string name="UI_invalid_class_code_msg">Invalid class code</string>
    <string name="UI_enter_class_code_msg">Please enter your class code</string>
    <string name="UI_class_joined_msg">You have joined the class</string>
    <string name="UI_class_joined_already_msg">You have already joined the class</string>
    <string name="UI_creating_class_msg">Creating class</string>
    <string name="UI_select_course_category_msg">Please select a course category</string>
    <string name="UI_select_grade_level_msg">Please select your class grade level</string>
    <string name="UI_enter_class_name_msg">Please enter class name</string>
    <string name="UI_example_class_name" translatable="false">E.g. Grade_10_math_class_A</string>
    <string name="UI_class_name_invalid_msg">Class name invalid</string>
    <string name="UI_create_class_success_title">You just created a new class</string>
    <string name="UI_create_class_success_msg">Your new class code is %d. You will also get an email containing the code. Please share it with your students.</string>
    <string name="UI_warning">Warning</string>
    <string name="UI_teacher_delete_course">Do you want to delete this course for everyone?</string>
    <string name="UI_student_delete_course">Do you want to quit this course?</string>
    <string name="UI_no_data">No data.</string>
    <string name="go_to_quiz">Go to Quiz</string>
    <string name="UI_default_module_text">module 1</string>
    <string name="UI_wrong_questions">Wrong Questions</string>
    <string name="UI_stats">stats</string>
    <string name="UI_notes">notes</string>
    <string name="UI_personal_score_string">your score: %.2f</string>
    <string name="UI_highest_score_text">highest: %.2f</string>
    <string name="UI_average_score_text">Average: %.2f</string>
    <string name="UI_create_new_module">Create new module</string>
    <string name="UI_enter_module_name">Please enter module name</string>
    <string name="UI_example_module_name" translatable="false">E.g module 1</string>
    <string name="UI_check_delete_module">Are you sure you want to delete module: %s?</string>
    <string name="UI_invalid_module_name">Invalid module name</string>
    <string name="AVERAGE" translatable="false">Average</string>
    <string name="HIGHEST" translatable="false">Highest</string>
    <string name="SCORE" translatable="false">score</string>
    <string name="UI_num_people_got_wrong">%s people got wrong on question %d.</string>
    <string name="UI_create_module_notification">Please create a module before creating a quiz</string>
    <string name="UI_correct_answer">correct answer</string>
    <string name="UI_no_question">Question %d has no question field.</string>
    <string name="UI_too_few_choices">Question %d has less than 2 choices.</string>
    <string name="UI_no_correct_answer">Question %d is a multiple choice question, but has no correct answer.</string>
    <string name="UI_create_quiz_success_msg">Congratulations! You have just created a quiz and earned 10 EXP.</string>
    <string name="UI_enter_answer">Enter answer</string>
    <string name="UI_example_question" translatable="false">E.g. 1+1=?</string>
    <string name="UI_example_answer" translatable="false">E.g. 2</string>
    <string name="UI_picture">Picture</string>
    <string name="UI_has_pic">has pic</string>
    <string name="UI_too_many_choices">Too many choices. Max of %d supported.</string>
    <string name="UI_add_question">Add question</string>
    <string name="UI_too_many_questions">Too many questions. Maximum of %d supported.</string>
    <string name="UI_invalid_quiz">There is no question in the quiz. Please use back button to exit if you want to discard this quiz.</string>
    <string name="UI_finish_create_quiz">Are you sure you want to submit this quiz?</string>
    <string name="UI_create_answer">Create answer</string>
    <string name="UI_delete">delete</string>
    <string name="UI_quit_quiz_editing_warning">Do you want to discard the quiz editing? Note that all your progress will be lost!</string>
    <string name="leader_board_page_text1" translatable="false">This is the leaderBoard page</string>
    <string name="UI_teachers_leaderboard">Teacher\'s leaderboard</string>
    <string name="UI_leaderboard_number" translatable="false">#</string>
    <string name="UI_leaderboard_score">Score</string>
    <string name="UI_back_to_statistics">Back to statistics</string>
    <string name="UI_current_class_name">Current class name: %s</string>
    <string name="UI_change_profile_image_msg">Do you want to change the profile image?</string>
    <string name="UI_change_username">change username</string>
    <string name="UI_question">Question</string>
    <string name="UI_finish">Finish</string>
    <string name="VOTE_FOR_LIKE" translatable="false">like</string>
    <string name="UI_quiz_finished_earned_exp_msg">You got %d EXP!</string>
    <string name="UI_quiz_finished_full_score_msg">You got %d/%d correct. Congratulations!</string>
    <string name="UI_finish_quiz_msg">You have finished the quiz!</string>
    <string name="UI_back_to_main_menu">Back to Main Menu</string>
    <string name="UI_do_you_like_the_quiz">Do you like the quiz?</string>
    <string name="take_picture">take picture</string>
    <string name="preview">preview</string>
</resources>