<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/UI_finish_quiz_msg"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quiz_finished_page_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/UI_quiz_finished_full_score_msg"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/quiz_finished_page_exp_earned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/UI_quiz_finished_earned_exp_msg"
                android:textColor="@color/colorGolden"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/quiz_finished_page_button"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/like_quiz_text"
                android:text="@string/UI_do_you_like_the_quiz"
                android:gravity="center"
                android:textSize="15sp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/like_quiz_vote_button"
                app:srcCompat="@drawable/ic_baseline_thumb_up_24"
                android:contentDescription="@string/VOTE_FOR_LIKE" />
        </LinearLayout>

        <Button
            android:id="@+id/quiz_finished_page_button"
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/UI_back_to_main_menu" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>