<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/test_page_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/test_page_take_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/preview" />

        <ImageView
            android:id="@+id/test_image"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/test_page_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue_text" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>