<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/test_page_view">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            android:id="@+id/test_page_take_photo_button"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="20dp"
            android:id="@+id/test_image"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/test_page_continue"
            android:text="@string/Continue_text"/>

        <Button
            android:id="@+id/test_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="upload" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>